--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<!DOCTYPE html
-     PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN"
-     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd">    
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Up</title>
+    <link href="burt.css" media="screen" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <span id="logo">Up&mdash;&gt;</span>
+    <div id="content">
+      <p>Super-simple static webserver.</p>
 
-	<title>RDoc Documentation</title>
-</head>
-<frameset cols="300,*" frameborder="1" border="1" bordercolor="#666666" framespacing="1">
-    <frame src="panel/index.html" title="Search" name="panel" />
-    <frame src="files/LICENSE.html" name="docwin" />
-</frameset>
+      <p>
+        The Docs: <a href="http://dvyjones.github.com/up/docs/">RDoc</a>
+      </p>
+
+      <p>
+        The Manual: <a href="man/up.1.html">up(1)</a>
+      </p>
+    </div>
+  </body>
 </html>
+
