Maybe adding the files to the commit helps? burt.css and index.html niceified

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="burt.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <span id="logo">Up&mdash;&gt;</span>
+    <span id="logo">Up&rarr;</span>
     <div id="content">
       <p>Super-simple static webserver.</p>
 
