--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Up</title>
-    <link href="burt.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="burt.css" rel="stylesheet">
   </head>
   <body>
     <span id="logo">Up&rarr;</span>
